feat: add smile api

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,12 @@
             </main>
         </div>
         <div class="d-flex justify-content-center">
+            <p class="counter"></p>
+            <div><video width="0" height="0" autoplay muted class="float-end"></video></div>
+        </div>
+        <div class="d-flex justify-content-center">
             <footer class="mt-auto text-white-50">
-                <p class="log">smile count Here</p>
+                <p class="log"></p>
             </footer>
         </div>
     </div>
@@ -40,6 +44,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./api/face-api.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
