fix: change how links are changed for the iframe

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 <br>
                 <div>
                     <p class="text-white-50 fst-italic fw-light mb-1" align="center" style="font-size: 12px;">Refresh page to load random funny video</p>
-                    <div id="video">
+                    <div id="video_container">
                         <iframe id="video" width="600" height="315" src="#" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>
                     </div>
                 </div>
