fix: video size

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,9 @@
         </header>
         <div class="d-flex justify-content-center">
             <main>
-                <br>
-                <div>
-                    <p class="text-white-50 fst-italic fw-light mb-1" align="center" style="font-size: 12px;">Refresh page to load random funny video</p>
-                    <div id="video_container">
-                        <iframe id="video" width="600" height="315" src="#" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>
-                    </div>
+                <p class="text-white-50 fst-italic fw-light mb-1" align="center" style="font-size: 1.7vh;">Refresh page to load a random funny video</p>
+                <div id="video_container">
+                    <iframe id="video" width="600" height="315" src="#" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>
                 </div>
                 <br>
                 <div class="d-flex justify-content-center">
