feat: adding stickers to the page

--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,14 @@
                 </div>
             </main>
         </div>
-        <div class="d-flex justify-content-center">
-            <p class="counter"></p>
-            <div><video width="0" height="0" autoplay muted class="float-end"></video></div>
+        <div class="d-flex justify-content-center mt-3">
+            <img src="./black.jpg" class="img-fluid" id="sticker" alt="funny Gif" width="100vh" height="100vh">
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mt-3">
             <footer class="mt-auto text-white-50">
-                <p class="log"></p>
+                <p class="log text-center"></p>
+                <p class="counter text-center"></p>
+            <div><video width="0" height="0" autoplay muted class="float-end"></video></div>
             </footer>
         </div>
     </div>
