--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,8 @@
         <header class="d-flex justify-content-center mt-5 pt-2">
                 <h1>Let's&nbspLaugh</h1>
         </header>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mt-4">
             <main>
-                <p class="text-white-50 fst-italic fw-light mb-1" align="center" style="font-size: 1.7vh;">Refresh page to load a random funny video</p>
                 <div id="video_container">
                     <iframe id="video" width="600" height="315" src="#" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>
                 </div>
@@ -25,9 +24,12 @@
                 <div class="d-flex justify-content-center">
                     <p>Watch funny videos and laugh out loud! 🤣</p>
                 </div>
+                <div class="d-flex justify-content-center" id="play_wrapper">
+                    <button type="button" class="btn text-white btn-secondary" onclick="randomize()">Randomize Video</button>
+                </div>
             </main>
         </div>
-        <div class="d-flex justify-content-center mt-3">
+        <div class="d-flex justify-content-center mt-5 pt-2">
             <img src="./black.jpg" class="img-fluid" id="sticker" alt="funny Gif" width="100vh" height="100vh">
         </div>
         <div class="d-flex justify-content-center mt-3">
