--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,11 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
     <script src="./api/face-api.min.js"></script>
     <script src="script.js"></script>
     <script>
+        var no = 0;
         document.getElementById('randomize').addEventListener('click',function (e) {
-            newrelic.addPageAction('clickedRandomize');
+            no += 1;
+            newrelic.addPageAction('Video_Watched', {'unique_id': unique_id,
+                                                'times_watched': no});
         })
     </script>
 </body>
