--- a/public/graphs.html
+++ b/public/graphs.html
@@ -11,11 +11,46 @@
 </head>
 <body class="text-white d-flex h-100" style="background-color: #000;">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header>
-            
+        <header class="d-flex justify-content-center mt-3 pt-2">
+            <h1>Let's&nbspLaugh</h1>
         </header>
         <main>
-            
+            <div class="d-flex justify-content-center">
+            <div class="row me-5 pe-5 ms-5 ps-5 mt-4 mb-2 pb-0 d-flex justify-content-center">
+                <div class="col-md-5">
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-2 d-flex flex-column position-static">
+                            <div class="d-flex justify-content-center"><iframe src="https://chart-embed.service.newrelic.com/herald/4709fde0-c756-48af-ad14-a92646c83b87?height=300px&timepicker=true" frameborder="0" style="position:center;width:640px;height:320px" scrolling="no"></iframe></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-2 d-flex flex-column position-static">
+                            <div class="d-flex justify-content-center"><iframe src="https://chart-embed.service.newrelic.com/herald/896f4380-83cd-4b5a-8d4f-8a57bb130be5?height=300px&timepicker=true" frameborder="0" style="position:center;width:640px;height:320px" scrolling="no"></iframe></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="d-flex justify-content-center">
+            <div class="row me-5 pe-5 ms-5 ps-5 mt-0 mb-0 pb-0 d-flex justify-content-center">
+                <div class="col-md-5">
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-2 d-flex flex-column position-static">
+                            <div class="d-flex justify-content-center"><iframe src="https://chart-embed.service.newrelic.com/herald/1859bca1-4cad-41ad-bf4b-3c44a75376e6?height=300px&width:640px&timepicker=true" frameborder="0" style="position:center;width:640px;height:320px" scrolling="no"></iframe></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-2 d-flex flex-column position-static">
+                            <div class="d-flex justify-content-center"><iframe src="https://chart-embed.service.newrelic.com/herald/7981bc6a-b857-490c-a7d0-9a506ea6e421?height=300px&width:640px&timepicker=true" frameborder="0" style="position:center;width:640px;height:320px;" scrolling="no"></iframe></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
         </main>
         <footer>
             <div class="d-flex justify-content-end">
